create e show fatta

--- a/la-mia-pizzeria-static/Views/Pizza/Index.cshtml
+++ b/la-mia-pizzeria-static/Views/Pizza/Index.cshtml
@@ -18,6 +18,7 @@
         <div class="pizza-view">
             <span class="invisible">@count</span>
             <h2>@pizza.Name</h2>
+            <p>@pizza.Category.Name</p>
             <p>@pizza.Description</p>
             <img src="@pizza.Photo">
             <p>Prezzo: @pizza.Price €</p>
