--- a/la-mia-pizzeria-static/Views/Pizza/Create.cshtml
+++ b/la-mia-pizzeria-static/Views/Pizza/Create.cshtml
@@ -50,6 +50,7 @@
                             }
                         }
                     </select> 
+                    <span asp-validation-for="Pizza.CategoryId" class="text-danger"></span>
                 </div>
 
                 <div class="text-end">
