--- a/la-mia-pizzeria-static/Views/Pizza/Detail.cshtml
+++ b/la-mia-pizzeria-static/Views/Pizza/Detail.cshtml
@@ -12,6 +12,7 @@
     <div class="pizza-view">
         <span class="invisible">@count</span>
         <h2>@Model.Name</h2>
+        <p>@Model.Category.Name</p>
         <p>@Model.Description</p>
         <img src="@Model.Photo">
         <p>Prezzo: @Model.Price €</p>
