--- a/la-mia-pizzeria-static/Views/Pizza/Update.cshtml
+++ b/la-mia-pizzeria-static/Views/Pizza/Update.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model Pizza
+@model PizzasCategories
 
 <div class="container">
     <div class="row">
@@ -7,31 +7,50 @@
             <div class="d-flex align-items-center">
                 <h1 class="mt-3 mb-3">Modifica tuo piatto:</h1>
             </div>
-            <form asp-controller="Pizza" asp-creation="Update" asp-route-id="@Model.PizzaID" method="post">
+            <form asp-controller="Pizza" asp-creation="Update" asp-route-id="@Model.Pizza.PizzaID" method="post">
                 @Html.AntiForgeryToken()
 
                 <div class="mb-3">
                     <strong>Nome piatto:</strong>
-                    <input asp-for="Name" class="d-block w-100"/>
-                    <span asp-validation-for="Name" class="text-danger"></span>
+                    <input asp-for="Pizza.Name" class="d-block w-100" />
+                    <span asp-validation-for="Pizza.Name" class="text-danger"></span>
                 </div>
 
                 <div class="mb-3">
                     <strong>Descrizione:</strong>
-                    <textarea asp-for="Description" rows="10" class="d-block w-100"></textarea>
-                    <span asp-validation-for="Description" class="text-danger"></span>
+                    <textarea asp-for="Pizza.Description" rows="10" class="d-block w-100"></textarea>
+                    <span asp-validation-for="Pizza.Description" class="text-danger"></span>
                 </div>
 
                 <div class="mb-3">
                     <strong>Foto piatto:</strong>
-                    <input asp-for="Photo" class="d-block w-100" />
-                    <span asp-validation-for="Photo" class="text-danger"></span>
+                    <input asp-for="Pizza.Photo" class="d-block w-100" />
+                    <span asp-validation-for="Pizza.Photo" class="text-danger"></span>
                 </div>
 
                 <div class="mb-3">
                     <strong>Prezzo piatto:</strong>
-                    <input asp-for="Price" class="d-block w-100" />
-                    <span asp-validation-for="Price" class="text-danger"></span>
+                    <input asp-for="Pizza.Price" class="d-block w-100" />
+                    <span asp-validation-for="Pizza.Price" class="text-danger"></span>
+                </div>
+
+                <div class="mb-3">
+                    <strong>Categoria:</strong>
+                    <select asp-for="Pizza.CategoryId" rows="10" class="d-block w-100">
+                        <option value=""></option>
+                        @foreach (Category category in Model.Categories)
+                        {
+                            @if (Model.Pizza.CategoryId == category.Id)
+                            {
+                                <option value="@category.Id" selected>@category.Name</option>
+                            }
+                            else
+                            {
+                                <option value="@category.Id">@category.Name</option>
+                            }
+                        }
+                    </select>
+                    <span asp-validation-for="Pizza.CategoryId" class="text-danger"></span>
                 </div>
 
                 <div class="text-end">
