aggiunta checkbox su create

--- a/la-mia-pizzeria-static/Views/Pizza/Create.cshtml
+++ b/la-mia-pizzeria-static/Views/Pizza/Create.cshtml
@@ -53,6 +53,20 @@
                     <span asp-validation-for="Pizza.CategoryId" class="text-danger"></span>
                 </div>
 
+
+                <div class="mb-3">
+                    <strong>Tag:</strong>
+                    @foreach (Tag tag in Model.Tags)
+                    {
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                            <label class="form-check-label" for="flexCheckDefault">
+                                <option value="@tag.Id" selected>@tag.Name</option>
+                            </label>
+                        </div>
+                    }
+                </div>
+
                 <div class="text-end">
                     <input type="submit" class="btn btn-small btn-success" value="Salva">
                 </div>
