--- a/la-mia-pizzeria-static/Views/Shared/_CLayout.cshtml
+++ b/la-mia-pizzeria-static/Views/Shared/_CLayout.cshtml
@@ -25,6 +25,13 @@
                 <li><a class="nav-link" href="#">Chi siamo</a></li>
                 <li><a class="nav-link" href="#">Contatti</a></li>
             </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="@Url.Action("Index", "Pizza")">Admin</a>
+                </li>
+                <!-- code omitted -->
+                <partial name="_LoginPartial" />
+            </ul>
         </navbar>
     </header>
 
